# FightTheForestOld

./: .gitignore  .gitmodules  CMakeLists.txt  MyApplication  build.sh  imgui.ini
include/: Rigidbody.hpp  StopWatch.hpp  WallShader.hpp  utils.hpp
modules/: FindBullet.cmake
src/: CMakeLists.txt  main.cpp  resources.conf
src/resources/wall/: wall.frag  wall.vert
